Fix dark mode colors on HouseForm site

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,4 +1,7 @@
 :root {
     --vp-c-brand: #8d57ff;
-    --vp-c-brand-light: #dac8ff;
+}
+
+html.dark {
+    --vp-c-brand: #dac8ff;
 }
